[gd_scene load_steps=8 format=3 uid="uid://cqskih2rjwo0c"]

[ext_resource type="Script" uid="uid://ca5r7dfxxx7c7" path="res://main.gd" id="1_ig7tw"]
[ext_resource type="Texture2D" uid="uid://djcd038xgiuv0" path="res://Áà±ÂøÉ.svg" id="2_7mycd"]
[ext_resource type="Texture2D" uid="uid://c3rxhehbqs1iw" path="res://Gemini_Generated_Image_qy3kbxqy3kbxqy3k.jpeg" id="2_272bh"]
[ext_resource type="AudioStream" uid="uid://cd1bplk60w7nl" path="res://gunshot-372470.mp3" id="2_h2yge"]
[ext_resource type="AudioStream" uid="uid://walq8slq15q5" path="res://shell-load-87813.mp3" id="3_1bvp3"]
[ext_resource type="Texture2D" uid="uid://dtadqiunmpwrl" path="res://ÊúâÂÆ≥ÂûÉÂúæ.svg" id="3_272bh"]
[ext_resource type="Texture2D" uid="uid://bbaoea25to558" path="res://Â≠êÂºπ.svg" id="4_5vw27"]

[node name="Main" type="Node2D"]
script = ExtResource("1_ig7tw")

[node name="Background" type="TextureRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -54.0
offset_top = -71.0
offset_right = 804.0
offset_bottom = 1347.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_272bh")
expand_mode = 1
stretch_mode = 5

[node name="Node2D" type="Node2D" parent="."]

[node name="Button" type="Button" parent="."]
offset_left = 45.0
offset_top = 721.0
offset_right = 321.0
offset_bottom = 1003.0
focus_mode = 0
text = "ÂØπËá™Â∑±ÂºÄÁÅ´
"

[node name="Button2" type="Button" parent="."]
offset_left = 390.0
offset_top = 721.0
offset_right = 683.0
offset_bottom = 1010.0
focus_mode = 0
text = "ÂºÄÊû™ÊâìÊÅ∂È≠î"

[node name="Label" type="Label" parent="."]
offset_left = 236.0
offset_top = 83.0
offset_right = 406.0
offset_bottom = 175.0
text = "Á≠âÂæÖÂºÄÁÅ´..."

[node name="MagButton" type="Button" parent="."]
offset_left = 111.0
offset_top = 548.0
offset_right = 259.0
offset_bottom = 613.0
text = "üîç ‰ΩøÁî®ÊîæÂ§ßÈïú"

[node name="PlayerHP" type="HBoxContainer" parent="."]
offset_left = 16.0
offset_top = 12.0
offset_right = 159.0
offset_bottom = 72.0
theme_override_constants/separation = 10

[node name="TextureRect" type="TextureRect" parent="PlayerHP"]
custom_minimum_size = Vector2(40, 60)
layout_mode = 2
texture = ExtResource("2_7mycd")
expand_mode = 1
stretch_mode = 5

[node name="TextureRect2" type="TextureRect" parent="PlayerHP"]
custom_minimum_size = Vector2(40, 60)
layout_mode = 2
texture = ExtResource("2_7mycd")
expand_mode = 1
stretch_mode = 5

[node name="TextureRect3" type="TextureRect" parent="PlayerHP"]
custom_minimum_size = Vector2(40, 60)
layout_mode = 2
texture = ExtResource("2_7mycd")
expand_mode = 1
stretch_mode = 5

[node name="DemonHP" type="HBoxContainer" parent="."]
offset_left = 470.0
offset_top = 18.0
offset_right = 616.0
offset_bottom = 81.0
theme_override_constants/separation = 10

[node name="TextureRect" type="TextureRect" parent="DemonHP"]
custom_minimum_size = Vector2(50, 60)
layout_mode = 2
texture = ExtResource("3_272bh")
expand_mode = 1
stretch_mode = 5

[node name="TextureRect2" type="TextureRect" parent="DemonHP"]
custom_minimum_size = Vector2(50, 60)
layout_mode = 2
texture = ExtResource("3_272bh")
expand_mode = 1
stretch_mode = 5

[node name="TextureRect3" type="TextureRect" parent="DemonHP"]
custom_minimum_size = Vector2(50, 60)
layout_mode = 2
texture = ExtResource("3_272bh")
expand_mode = 1
stretch_mode = 5

[node name="AmmoRow" type="HBoxContainer" parent="."]
offset_left = 251.0
offset_top = 217.0
offset_right = 291.0
offset_bottom = 257.0
theme_override_constants/separation = 5

[node name="TextureRect" type="TextureRect" parent="AmmoRow"]
custom_minimum_size = Vector2(25, 50)
layout_mode = 2
texture = ExtResource("4_5vw27")
expand_mode = 1
stretch_mode = 5

[node name="TextureRect2" type="TextureRect" parent="AmmoRow"]
custom_minimum_size = Vector2(25, 50)
layout_mode = 2
texture = ExtResource("4_5vw27")
expand_mode = 1
stretch_mode = 5

[node name="TextureRect3" type="TextureRect" parent="AmmoRow"]
custom_minimum_size = Vector2(25, 50)
layout_mode = 2
texture = ExtResource("4_5vw27")
expand_mode = 1
stretch_mode = 5

[node name="TextureRect4" type="TextureRect" parent="AmmoRow"]
custom_minimum_size = Vector2(25, 50)
layout_mode = 2
texture = ExtResource("4_5vw27")
expand_mode = 1
stretch_mode = 5

[node name="TextureRect5" type="TextureRect" parent="AmmoRow"]
custom_minimum_size = Vector2(25, 50)
layout_mode = 2
texture = ExtResource("4_5vw27")
expand_mode = 1
stretch_mode = 5

[node name="TextureRect6" type="TextureRect" parent="AmmoRow"]
custom_minimum_size = Vector2(25, 50)
layout_mode = 2
texture = ExtResource("4_5vw27")
expand_mode = 1
stretch_mode = 5

[node name="TextureRect7" type="TextureRect" parent="AmmoRow"]
custom_minimum_size = Vector2(25, 50)
layout_mode = 2
texture = ExtResource("4_5vw27")
expand_mode = 1
stretch_mode = 5

[node name="SfxShoot" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_h2yge")
volume_db = -10.645

[node name="SfxEmpty" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_1bvp3")
volume_db = -10.495

[node name="RestartButton" type="Button" parent="."]
visible = false
offset_left = 261.0
offset_top = 465.0
offset_right = 427.0
offset_bottom = 529.0
focus_mode = 0
text = "üîÑ ÂÜçÊù•‰∏ÄÂ±Ä"

[node name="SawButton" type="Button" parent="."]
offset_left = 108.0
offset_top = 633.0
offset_right = 259.0
offset_bottom = 689.0
focus_mode = 0
text = "ü™ö ‰ΩøÁî®ÈîØÂ≠ê
"

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="MagButton" to="." method="_on_mag_button_pressed"]
[connection signal="pressed" from="RestartButton" to="." method="_on_restart_button_pressed"]
[connection signal="pressed" from="SawButton" to="." method="_on_saw_button_pressed"]
