extends Node2D

# --- æ¸¸æˆæ•°æ® ---
var magazine = []       
var current_shot = 0    
var player_hp = 3
var demon_hp = 3
var is_player_turn = true 

# --- é“å…·åº“å­˜ ---
var has_magnifier = true 
var has_saw = true      

# --- ä¸´æ—¶çŠ¶æ€ ---
var damage_multiplier = 1 

func _ready():
	print("æ¸¸æˆåˆå§‹åŒ–æˆåŠŸï¼")
	randomize()
	$RestartButton.visible = false 
	reload_gun()

func reload_gun():
	magazine.clear()
	current_shot = 0
	var bullets_count = randi_range(3, 5)
	for i in range(bullets_count):
		magazine.append(randi() % 2)
	
	if not 1 in magazine:
		magazine[0] = 1
		magazine.shuffle()
	
	is_player_turn = true
	# --- è¡¥ç»™é“å…· ---
	has_magnifier = true
	has_saw = true 
	damage_multiplier = 1 
	
	update_ui("è£…å¼¹å®Œæ¯•ï¼\næ–°çš„å›åˆå¼€å§‹ã€‚")
	enable_buttons(true)

func fire(target_is_self: bool):
	enable_buttons(false)
	
	if current_shot >= magazine.size():
		update_ui("å¼¹åŒ£ç©ºäº†ï¼Œæ­£åœ¨é‡è£…...")
		await get_tree().create_timer(1.5).timeout 
		reload_gun()
		return

	var is_real = magazine[current_shot] == 1
	current_shot += 1
	
	var result_msg = ""
	var shooter_name = "ç©å®¶" if is_player_turn else "æ¶é­”"
	
	if is_real:
		$SfxShoot.play()
		# å±å¹•éœ‡åŠ¨
		shake_screen(10.0 * damage_multiplier) 
		
		var final_damage = 1 * damage_multiplier 
		result_msg = "ã€ç °ï¼ã€‘å®å¼¹ï¼(ä¼¤å®³ " + str(final_damage) + ")"
		
		if target_is_self:
			if is_player_turn:
				flash_effect($PlayerHP) # <--- ç©å®¶å—å‡»åŠ¨ç”»
				player_hp -= final_damage
				result_msg += "\nä½ æŠŠè‡ªå·±å´©äº†ï¼"
			else:
				flash_effect($DemonHP) # <--- æ¶é­”å—å‡»åŠ¨ç”»
				demon_hp -= final_damage
				result_msg += "\næ¶é­”æŠŠè‡ªå·±å´©äº†ï¼"
			change_turn()
		else:
			if is_player_turn:
				flash_effect($DemonHP) # <--- æ¶é­”å—å‡»åŠ¨ç”»
				demon_hp -= final_damage
				result_msg += "\nä½ å‡»ä¸­äº†æ¶é­”ï¼"
			else:
				flash_effect($PlayerHP) # <--- ç©å®¶å—å‡»åŠ¨ç”»
				player_hp -= final_damage
				result_msg += "\næ¶é­”å‡»ä¸­äº†ä½ ï¼"
			change_turn()
	else:
		$SfxEmpty.play()
		# ç©ºå¼¹è½»å¾®éœ‡åŠ¨
		shake_screen(3.0)
		result_msg = "ã€å’”å“’ã€‘æ˜¯ç©ºå¼¹ã€‚"
		if target_is_self:
			result_msg += "\n" + shooter_name + "è¿æ°”ä¸é”™ï¼Œç»§ç»­å›åˆï¼"
			if not is_player_turn:
				start_demon_turn()
			else:
				enable_buttons(true)
		else:
			result_msg += "\n" + shooter_name + "æ‰“ç©ºäº†ï¼Œè½®æ¢ï¼"
			change_turn()

	damage_multiplier = 1 
	update_ui(result_msg)
	check_game_over()

# --- é“å…·é€»è¾‘ ---
func use_magnifier():
	has_magnifier = false
	enable_buttons(true) 
	var next_bullet = magazine[current_shot]
	if next_bullet == 1:
		update_ui("ã€æ”¾å¤§é•œã€‘æ˜¾ç¤ºï¼šä¸‹ä¸€å‘æ˜¯ ğŸ”¥ å®å¼¹")
	else:
		update_ui("ã€æ”¾å¤§é•œã€‘æ˜¾ç¤ºï¼šä¸‹ä¸€å‘æ˜¯ ğŸ’¨ ç©ºå¼¹")

func use_saw():
	has_saw = false
	damage_multiplier = 2
	update_ui("ã€é”¯å­ã€‘ä½ é”¯çŸ­äº†æªç®¡...\nä¸‹ä¸€å‘å®å¼¹å°†é€ æˆ 2 ç‚¹ä¼¤å®³ï¼")
	enable_buttons(true) 

# --- ğŸ¨ åŠ¨ç”»ç‰¹æ•ˆåŒºåŸŸ ---

# æ–°å¢ï¼šå—å‡»é—ªç™½ç‰¹æ•ˆ
func flash_effect(target_node: CanvasItem):
	var tween = create_tween()
	# ç¬é—´å˜é«˜äº®ç™½
	tween.tween_property(target_node, "modulate", Color(3, 3, 3, 1), 0.05)
	# å¿«é€Ÿå˜å›åŸè‰²
	tween.tween_property(target_node, "modulate", Color.WHITE, 0.1)

# å±å¹•éœ‡åŠ¨ç‰¹æ•ˆ
func shake_screen(intensity: float):
	var tween = create_tween()
	tween.tween_property(self, "position", Vector2(intensity, 0), 0.05)
	tween.tween_property(self, "position", Vector2(-intensity, 0), 0.05)
	tween.tween_property(self, "position", Vector2(0, 0), 0.05)

# --- æ¸¸æˆæµç¨‹é€»è¾‘ ---
func change_turn():
	is_player_turn = !is_player_turn
	damage_multiplier = 1 
	await get_tree().create_timer(1.0).timeout
	
	if is_player_turn:
		update_ui(">>> è½®åˆ°ã€ç©å®¶ã€‘è¡ŒåŠ¨")
		enable_buttons(true)
	else:
		update_ui(">>> è½®åˆ°ã€æ¶é­”ã€‘è¡ŒåŠ¨")
		start_demon_turn()

func start_demon_turn():
	await get_tree().create_timer(1.5).timeout
	var ai_decision = randi() % 2 
	if ai_decision == 0:
		update_ui("æ¶é­”ç¼“ç¼“æŠŠæªå£å¯¹å‡†äº†è‡ªå·±...")
		await get_tree().create_timer(1.0).timeout
		fire(true)
	else:
		update_ui("æ¶é­”æŠŠæªå£å¯¹å‡†äº†ä½ ï¼")
		await get_tree().create_timer(1.0).timeout
		fire(false)

func update_ui(message: String):
	$Label.text = ">>> æˆ˜å†µ <<<\n" + message
	update_visuals()

func update_visuals():
	var player_charges = $PlayerHP.get_children()
	for i in range(player_charges.size()):
		player_charges[i].visible = player_hp > i
	var demon_charges = $DemonHP.get_children()
	for i in range(demon_charges.size()):
		demon_charges[i].visible = demon_hp > i
	var bullets_left = magazine.size() - current_shot
	var ammo_icons = $AmmoRow.get_children()
	for i in range(ammo_icons.size()):
		if i < bullets_left:
			ammo_icons[i].visible = true
		else:
			ammo_icons[i].visible = false

func enable_buttons(enabled: bool):
	$Button.disabled = !enabled
	$Button2.disabled = !enabled
	$MagButton.disabled = !(enabled and has_magnifier)
	$SawButton.disabled = !(enabled and has_saw and damage_multiplier == 1)

func check_game_over():
	if player_hp <= 0:
		$Label.text = "ä½ å€’ä¸‹äº†... æ¸¸æˆç»“æŸã€‚"
		game_end_setup()
	elif demon_hp <= 0:
		$Label.text = "æ¶é­”æ¶ˆæ•£äº†... ä½ èµ¢äº†ï¼"
		game_end_setup()

func game_end_setup():
	$Button.disabled = true
	$Button2.disabled = true
	$MagButton.disabled = true
	$SawButton.disabled = true
	set_process(false)
	$RestartButton.visible = true

func _on_restart_button_pressed() -> void:
	get_tree().reload_current_scene()

# --- ä¿¡å·è¿æ¥ ---
func _on_button_pressed() -> void:
	if is_player_turn: fire(true)
func _on_button_2_pressed() -> void:
	if is_player_turn: fire(false)
func _on_mag_button_pressed() -> void:
	if is_player_turn: use_magnifier()
func _on_saw_button_pressed() -> void:
	if is_player_turn: use_saw()

func _input(event):
	if not is_player_turn: return
	if event.is_action_pressed("ui_accept"): fire(true)
	elif event.is_action_pressed("ui_select"): fire(false)
